#26573 adding sonarq feedback